test/e2e/fail/013-unknown-variant/expected.stderr
error[E0011]: unknown variant
 --> $FILE:6:9
  |
6 | let s = Shape::Bogus;
  |         ^^^^^^^^^^^^ variant `Bogus` does not exist on enum `Shape`
  |
